# pyjess

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYING  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package.yml  requirements.txt  test.yml
docs/: cli.rst  conf.py  index.rst  install.rst  requirements.txt
docs/_static/json/: switcher.json
docs/api/: index.rst  jess.rst  molecule.rst  template.rst
docs/guide/: cli.rst  copyright.rst  index.rst  install.rst  optimizations.rst
include/jess/: annulus.pxd  atom.pxd  candidate_set.pxd  jess.pxd  join.pxd  kdtree.pxd  molecule.pxd  region.pxd  res_index.pxd  scanner.pxd  super.pxd  template.pxd  tess_atom.pxd  tess_template.pxd
patches/: Annulus.c.patch  Annulus.h.patch  Atom.c.patch  Atom.h.patch  Box.c.patch  Box.h.patch  CMakeLists.txt.patch  CandidateSet.c.patch  CandidateSet.h.patch  Jess.c.patch  Jess.h.patch  Join.c.patch  Join.h.patch  KdTree.c.patch  KdTree.h.patch  Main.c.patch  Molecule.c.patch  Molecule.h.patch  ResIndex.c.patch  ResIndex.h.patch  Scanner.c.patch  Scanner.h.patch  Super.c.patch  Template.h.patch  TessAtom.c.patch  TessAtom.h.patch  TessTemplate.c.patch  TessTemplate.h.patch  qselect.h.patch
pkg/aur/: PKGBUILD.in
pyjess/: .gitignore  __init__.py  _jess.pyi  _jess.pyx
pyjess/tests/: __init__.py  test_atom.py  test_jess.py  test_molecule.py  test_template.py  test_template_atom.py  test_tess_atom.py  test_tess_template.py  utils.py
pyjess/tests/data/: template_01.qry  template_02.qry
src/: CMakeLists.txt
src/jess/: CMakeLists.txt
src/pyjess/: CMakeLists.txt  __init__.py  __main__.py  _io.py  _jess.pyi  _jess.pyx  _peekable.py  cli.py
src/pyjess/tests/: __init__.py  test_atom.py  test_doctest.py  test_hit.py  test_jess.py  test_molecule.py  test_template.py  test_template_atom.py
src/pyjess/tests/data/: 1.3.3.tpl  1AMY+1.3.3.txt  1AMY.cif  1sur.qry  4.1.2.tpl  template_01.qry  template_02.qry
src/scripts/: apply_patch.py  generate_patches.py
src/scripts/cmake/: CythonExtension.cmake
