[metadata]
name = pyjess
version = attr: pyjess.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/althonos/pyjess
description = Cython bindings and Python interface to JESS, a 3D template matching software. 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = bioinformatics, structure, template, matching
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Typing :: Typed
project_urls =
    # Documentation = https://pyjess.readthedocs.io/en/stable/
    Bug Tracker = https://github.com/althonos/pyjess/issues
    Changelog = https://github.com/althonos/pyjess/blob/main/CHANGELOG.md
    Coverage = https://codecov.io/gh/althonos/pyjess/
    Builds = https://github.com/althonos/pyjess/actions
    PyPI = https://pypi.org/project/pyjess

[options]
zip_safe = false
packages = pyjess
include_package_data = false
python_requires = >=3.5
setup_requires =
    setuptools >=46.4
    cython ~=3.0
tests_require =
    importlib-resources ; python_version < '3.9'

[options.package_data]
pyjess = py.typed, *.pyi

[coverage:run]
plugins = Cython.Coverage
include = pyjess/*.py, pyjess/_jess.pyx

[coverage:report]
include = pyjess/*
omit = tests/*
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
    raise MemoryError()

[pydocstyle]
inherit = false
ignore = D102,D105,D200,D203,D213,D406,D407
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
exclude = pyjess/tests/*

[mypy-pyjess.tests]
disallow_untyped_defs = false

[isort]
known_first_party = pyjess, jess
known_standard_library = cpython, cython, _unicode
known_third_party = libc, libcpp, shared_matrix
line_length = 88
profile = black
skip_gitignore = true
skip_glob = vendor/jess/*
